# rpo-hackathon

./: .gitignore  LICENSE  README.md  README_CRITIC.md  SYSTEM_PROMPT.py  TradeFlow Hackathon Pitch.pptx  actor.py  actor_actions.json  chat_history.json  critic.py  demo.db  flask_chatroom.py  ip.yaml  langflow_actor.py  mcp_agentic_client.ipynb  mcp_server.py  pyproject.toml  start_system.sh  test_communication.py  test_server.py  test_stock_api.py  trading.db
n8n_agent/: actor_AI.json
static/css/: style.css
static/js/: dashboard.js
templates/: index.html
