[project]
name = "mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "llama-index>=0.14.7",
    "mcp[cli]>=1.20.0",
    "ollama>=0.6.0",
    "uvicorn>=0.21.1",
    "llama-index-llms-ollama",
    "llama-index-tools-mcp",
    "finnhub-python>=2.4.25",
    "flask>=3.1.2",
]
